Fixed contrast accessibility issues

--- a/strata-3.1.6/_/s3/css/strata-three.css
+++ b/strata-3.1.6/_/s3/css/strata-three.css
@@ -23,8 +23,8 @@ Sections
 .s3-gt3k {background-color: #2f1c1f; color: #b5b5b4}
 .s3-gd   {background-color: #ceb888; color: #161514}
 .s3-gd1c {background-color: #dacaa6; color: #2c2a29}
-.s3-gd2c {background-color: #e7dcc4; color: #565554}
-.s3-gd3c {background-color: #f3ede1; color: #767474}
+.s3-gd2c {background-color: #e7dcc4; color: #000000}
+.s3-gd3c {background-color: #f3ede1; color: #000000}
 .s3-c    {background-color: #fdfcfc; color: #2c2a29}
 .s3-w    {background-color: #f4f4f4; color: #2c2a29}
 .s3-n2w  {background-color: #d5d4d4; color: #2c2a29}
